fix li horizontal scrollbar

--- a/src/components/mobile/Tabs/tab.scss
+++ b/src/components/mobile/Tabs/tab.scss
@@ -43,7 +43,7 @@
 .segment{
 	li:not(:last-child) {
 		position: relative;
-		overflow-y: hidden;
+		//overflow-y: hidden;
 		font-family: font-family('Lato-Regular');
 		color: color(--primary);
 		font-size: 13px;
@@ -56,7 +56,7 @@
 			position: absolute;
 			right: 0px;
 			top: -1px;
-		}	
+		}
 	}
 	li:last-child{
 		padding: 0px rem(20px);
